clusters/calcifer-home/apps/home-automation/zigbee2mqtt/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zigbee2mqtt-security-headers
  namespace: home-automation
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: no-referrer
    stsSeconds: 31536000
    stsIncludeSubdomains: true
