clusters/calcifer-home/apps/home-automation/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  ports:
    - name: http-edge
      port: 4180
      targetPort: oauth2-proxy
