clusters/calcifer-home/apps/home-automation/zigbee2mqtt/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zigbee.calcifer.tech`)
      middlewares:
        - name: zigbee2mqtt-security-headers
      services:
        - name: zigbee2mqtt
          port: 4180
          passHostHeader: true
  tls:
    secretName: zigbee2mqtt-tls
